# scratchpad

./: .gitignore  LICENSE
PatternIdeas/: CMakeLists.txt  PatternIdeas.cpp  PatternIdeas.h
PatternIdeas/observer/: CMakeLists.txt  derived_observers.cpp  derived_observers.h  observer.cpp  observer.h  subject.cpp  subject.h
